# ocrAutomator

./: .gitignore  API.md  CHANGELOG  CMakeLists.txt  CreatePackage.sh  Deploy.sh  Dockerfile  LICENSE  LinuxTesseract.sln  README.md  Release.gpg  TesseractAutomator.sln
Env/: env-exemple.config
Includes/Exiv2/exiv2/: exv_msvc.h
Libs/Win32/Debug/: libexiv2.lib  libexpat.lib  libmuthreads.lib  zlib1.lib
Libs/Win32/Release/: exiv2.lib  expat.lib  libmuthreads.lib  xmp.lib  zlib.lib  zlibstatic.lib
LinuxTesseract/: Display.cpp  FileStatus.h  LinuxTesseract.vcxproj  LinuxTesseract.vcxproj.filters  Main.cpp  TesseractRunner.cpp  TesseractRunner.h
OcrAutomator/: ArrayMemoryFileBuffer.h  AutoResetEvent.h  BaseFileStatus.h  BaseOcr.h  BaseOcrWithLoader.cpp  BaseOcrWithLoader.h  BaseProcessingWorker.h  Error.h  ExivMemoryFileBuffer.cpp  ExivMemoryFileBuffer.h  Export.h  FzBufferMemoryFileBuffer.cpp  FzBufferMemoryFileBuffer.h  HttpServer.cpp  HttpServer.h  JpegTurboMemoryFileBuffer.h  Main.cpp  Main.h  Main_GlobalOptions.cpp  Main_Master.cpp  Main_Slave.cpp  MasterFileStatus.h  MasterLocalFileStatus.h  MasterMemoryFileStatus.h  MasterProcessingWorker.cpp  MasterProcessingWorker.h  MasterProcessingWorker_SignalHandler.cpp  MemoryFileBuffer.h  MuPDF.cpp  MuPDF.h  Network.cpp  Network.h  NetworkClient.cpp  NetworkClient.h  NetworkSession.cpp  NetworkSession.h  NoOcr.h  NoOcrFactory.h  OcrAutomator.vcxitems  OcrAutomator.vcxitems.filters  (+15 more)
OcrAutomator/Api/: Export.h  OcrAutomatorMaster.cpp  OcrAutomatorMaster.h  OcrProperty.h  OcrResult.cpp  OcrResult.h
OcrAutomator/Base/: BaseDisplay.h  BaseFileStatus.h  BaseProcessingWorker.h  Error.h  ExtraOutput.h  ImageFormatEnum.h  OutputFlags.h  RTTR.cpp  RTTR.h  Version.h
OcrAutomator/Buffer/: ArrayMemoryFileBuffer.cpp  FzBufferMemoryFileBuffer.cpp  JpegTurboMemoryFileBuffer.cpp  StringMemoryFileBuffer.cpp  VectorMemoryFileBuffer.cpp  VectorMemoryFileBuffer.h
OcrAutomator/Http/: HttpServer.cpp  HttpServer.h
OcrAutomator/Master/: MasterFileStatus.h  MasterLocalFileStatus.h  MasterMemoryFileStatus.h  MasterProcessingWorker.cpp  MasterProcessingWorker.h  MasterProcessingWorker_SignalHandler.cpp  OcrAutomatorMaster.cpp  OcrAutomatorMaster.h
OcrAutomator/Master/Network/: Network.cpp  Network.h  NetworkSession.cpp  NetworkSession.h
OcrAutomator/Ocr/: BaseOcr.h  BaseOcrWithLoader.cpp  BaseOcrWithLoader.h  Ocr.h  OcrFactory.h  UninitializedOcrException.h
OcrAutomator/Ocr/NoOcr/: NoOcr.h  NoOcrFactory.h
OcrAutomator/Ocr/Tesseract/: Tesseract.cpp  Tesseract.h  (+1 more)
OcrAutomator/PDF/: MuPDF.cpp  MuPDF.h
OcrAutomator/Protobuf/: Broadcast.pb.cc  Declare.pb.cc  Declare.pb.h  Declare.proto  File.proto  Message_Master.pb.cc  Message_Master.pb.h  Message_Master.proto  Message_Slave.proto  NetworkInfo.pb.cc  NetworkInfo.proto  Result.pb.cc  Result.pb.h  Result.proto  Status.pb.cc  Status.pb.h  Status.proto  Synchro_Master.pb.cc  Synchro_Master.proto  Synchro_Slave.pb.h  Synchro_Slave.proto
OcrAutomator/Slave/: SlaveFileStatus.h  SlaveProcessingWorker.cpp  SlaveProcessingWorker.h  SlaveState.h
OcrAutomator/XMP/: MemoryXMPIO.cpp  MemoryXMPIO.h  TempXMPIO.cpp  TempXMPIO.h
OcrAutomatorLinux/: Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  Error.cpp  FactorySelector.cpp  OcrAutomatorLinux.vcxproj  OcrAutomatorLinux.vcxproj.filters  SlaveDisplay.cpp  SlaveDisplay.h  packages.config
OcrAutomatorLinux/Base/: Error.cpp
OcrAutomatorLinux/Master/: Display.cpp  Display.h
OcrAutomatorLinux/Slave/: SlaveDisplay.cpp  SlaveDisplay.h
OcrAutomatorTest/: Test.cpp
OcrAutomatorTest/Test/: TEST_Global.cpp  TEST_Global.h  TEST_Tesseract.cpp
OcrAutomatorWin32/: A2IA.cpp  A2IA.h  A2IAFactory.cpp  A2IAFactory.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  Error.cpp  FactorySelector.cpp  OcrAutomatorMaster.cpp  OcrAutomatorMaster.h  RTTR_Win.cpp  SlaveDisplay.cpp  SlaveDisplay.h  TesseractAutomatorWin32.vcxproj  TesseractAutomatorWin32.vcxproj.filters  packages.config
OcrAutomatorWin32/Base/: Error.cpp  RTTR_Win.cpp
OcrAutomatorWin32/Master/: Display.cpp  Display.h
OcrAutomatorWin32/Slave/: SlaveDisplay.cpp  SlaveDisplay.h
OcrAutomatorWin32GUI/: App.xaml  App.xaml.cs  Configuration.xaml  Configuration.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OcrAutomatorWin32GUI.csproj  packages.config
OcrAutomatorWin32GUI/Design/: DesignDataService.cs
OcrAutomatorWin32GUI/Model/: DataItem.cs  DataService.cs  IDataService.cs
OcrAutomatorWin32GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
OcrAutomatorWin32GUI/ViewModel/: MainViewModel.cs  ViewModelLocator.cs
OcrAutomatorWin32Managed/: AssemblyInfo.cpp  OcrAutomatorWin32Managed.cpp  OcrAutomatorWin32Managed.h  OcrAutomatorWin32Managed.vcxproj  OcrAutomatorWin32Managed.vcxproj.filters  ReadMe.txt  Stdafx.cpp
TesseractAutomator/: BaseFileStatus.h  BaseOcr.h  BaseProcessingWorker.h  BaseTesseractRunner.h  Display.cpp  Display.h  Error.cpp  Error.h  FileStatus.h  FileSum.h  LinuxTesseract.vcxproj.filters  Main.cpp  MasterProcessingWorker.cpp  MasterProcessingWorker.h  MuPDF.cpp  MuPDF.h  Network.cpp  Network.h  NetworkClient.cpp  NetworkClient.h  NetworkSession.cpp  NetworkSession.h  OutputFlags.h  SlaveDisplay.cpp  SlaveDisplay.h  SlaveFileStatus.h  SlaveProcessingWorker.cpp  SlaveProcessingWorker.h  SlaveState.h  Tesseract.cpp  Tesseract.h  TesseractAutomator.vcxproj  TesseractAutomator.vcxproj.filters  TesseractFactory.h  TesseractRunner.cpp  TesseractRunner.h  TesseractSlaveRunner.cpp  TesseractSlaveRunner.h  Version.h
TesseractAutomator/Protobuf/: Broadcast.pb.h  Broadcast.proto  Compile.sh  File.pb.cc  File.pb.h  Message_Slave.pb.cc  Message_Slave.pb.h  NetworkInfo.pb.h  Result.pb.cc  Result.proto  Synchro_Master.pb.cc  Synchro_Master.pb.h  Synchro_Master.proto  Synchro_Slave.pb.cc
Test_Data/Pdf/: Pdf1.docx
cmake/: FindA2ia.cmake  FindJpegTurbo.cmake  FindLeptonica.cmake  FindLibArchive.cmake  FindMuPdf.cmake  FindRTTR.cmake  FindRapidJson.cmake  FindTesseract.cmake  FindXMPCore.cmake  FindXMPFiles.cmake  FindZLIB.cmake
(+6 files in other folders)
